Library Overrides: Duplicate of overridden collection appears in scene collection on Resync #82996

Closed
opened 2020-11-25 12:10:01 +01:00 by Demeter Dzadik · 7 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-14 21:24, hash: 194a57fd63

Short description of error
If the overridden collection is placed in another collection and then resynced, it also appears in the Scene collection. Not sure if this is a duplicate/instance/the same thing just displayed in two places.

Exact steps for others to reproduce the error

  • Save, link and override the default cube's collection
  • Place the overridden collection into any other collection that isn't the Scene Collection.
  • Resync Library Override Hierarchy
  • Copy appears in the Scene Collection.
    OeZUxdxdbK.mp4
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-14 21:24, hash: `194a57fd63` **Short description of error** If the overridden collection is placed in another collection and then resynced, it also appears in the Scene collection. Not sure if this is a duplicate/instance/the same thing just displayed in two places. **Exact steps for others to reproduce the error** - Save, link and override the default cube's collection - Place the overridden collection into any other collection that isn't the Scene Collection. - Resync Library Override Hierarchy - Copy appears in the Scene Collection. [OeZUxdxdbK.mp4](https://archive.blender.org/developer/F9371883/OeZUxdxdbK.mp4)
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

#82835 was marked as duplicate of this issue

#82835 was marked as duplicate of this issue
Author
Member

Added subscribers: @amshiv, @mano-wii

Added subscribers: @amshiv, @mano-wii
Bastien Montagne self-assigned this 2020-11-25 13:01:27 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Just a note. The duplicate collection disappears when we drag it to the "no root level" collection in the outliner. (referring to the video above)

Just a note. The duplicate collection disappears when we drag it to the "no root level" collection in the outliner. (referring to the video above)

This issue was referenced by 3bdc42f97a

This issue was referenced by 3bdc42f97a837766aec2bcd57917ef631570304f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82996
No description provided.