Fix T82996: Library Overrides: Duplicate of overridden collection on Resync

Properly use given reference pointer in
`lib_override_library_create_post_process` when it is a Collection one
too.